# django-professional

./: README.md  pyproject.toml
.github/workflows/: django_ci.yml
devpro/: settings.py  urls.py
devpro/base/: test_.py  urls.py
