[tool.poetry]
name = "django-para-profissionais"
version = "0.1.0"
description = "Projeto com código fonte do curso Django para Profisisonais da DevPro"
authors = ["gustavodsantos <gustavojuniordos@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
taskipy = "^1.13.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devpro.settings"
python_files = ["test*","test_*.py", "*_test.py", "testing/python/*.py"]

[tool.isort]
profile = "black"
known_third_party = ["django"]

[tool.ruff]
line-length=120
exclude = ['./devpro/base/migrations']
extend-select = ["I"]

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'

format = 'ruff check . --fix && ruff format .'

run = 'python manage.py runserver'

pre_test = 'task lint'
test = 'pytest devpro/ -s -x --cov=devpro -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
